<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/colorElements"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/anirologo"
        android:id="@+id/logo"
        tools:ignore="ContentDescription"/>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColor="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:background="@color/background_edit_text"
        android:drawableStart="@drawable/person"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColor="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/background_edit_text"
        android:drawableStart="@drawable/locker"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#FF69B4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/login"
                android:textColor="#FAFAFA"
                android:textStyle="bold|italic"
                android:textSize="20sp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/open_register_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_here"
        android:gravity="center"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

</LinearLayout>